--- a/src/app/actividad/actividad.component.html
+++ b/src/app/actividad/actividad.component.html
@@ -25,7 +25,7 @@
         <th>DESCRIPCION </th>
         <th>ESTADO</th>          
       </tr>
-      <tr *ngFor="let actividad of actividad">
+      <tr *ngFor="let actividad of actividades">
         <th >{{actividad.Id}} </th>
         <th>{{actividad.FechaCreacion}} </th>
         <th>{{actividad.FechaLimite}} </th>
